# QtFractals

./: CMakeLists.txt  Fractals.cc  Julia.glsl  MainWindow.cc  MainWindow.hh  Mandelbrot.glsl  RenderWidget.cc  RenderWidget.hh  Shaders.qrc
